fix: menu size on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 .big {
-  font-size: 3rem;
+  font-size: 15vw;
   font-weight: 800;
   transition: 0.3s;
 }
@@ -780,7 +780,7 @@ a {
   }
 
   div.menu a {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
 
   div.menu {
